--- a/introducao.tex
+++ b/introducao.tex
@@ -2,7 +2,7 @@
 \label{introdução}
 \section{Descrição dos objetivos do documento}
 \subsection{Enquadramento incial}
-Este documento enquadra-se no desenvolvimento do projeto \textbf{ePadaria} , e tem como principais objetivos organizar,planear e solidificar um plano de projeto para o sistema.
+Este documento enquadra-se no desenvolvimento do projeto \textbf{ePadaria} , e tem como principais objetivos organizar,planear e solidificar um plano de projeto para o sistema.fffffffffffffffffffffffffffffffff
 
 \subsection{Público alvo}
 O publico alvo do nosso projeto são a maioria das padarias que se apresentam sem um sistema de gestão de pedidos e obviamente seremos os primeiros a usar.
