--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -10,6 +10,7 @@
 \input{introducao}
 \input{ambito}
 \input{calendarizacao}
+\input{organizacao_da_equipa}
 
 \bibliography{library}
 \end{document}
