--- a/Eng-Software/organizacao_da_equipa.tex
+++ b/Eng-Software/organizacao_da_equipa.tex
@@ -4,3 +4,8 @@
 \section{Membros da Equipa e as suas competências}
 \section{Responsabilidades e Tarefas de cada membro da equipa}
 \section{Responsabilidades e Tarefas de cada membro da equipa}
+\section{Identificação de formação em valências/competências a adquirir}
+\section{Identificação de necessidades de contratação de pessoal
+}
+\section{Identificação de necessidades de subcontratação}
+\section{Se necessário pode ser complementado com um organograma}
