Eng-Software | Organização da Equipa

--- a/Eng-Software/organizacao_da_equipa.tex
+++ b/Eng-Software/organizacao_da_equipa.tex
@@ -1,11 +1,26 @@
 \chapter{Organização da Equipa}
 \label{organizacao_da_equipa}
 \section{Lista de funções/competências necessárias}
-\section{Membros da Equipa e as suas competências}
+Este projeto irá requer competências relacionadas com programação backend e frontend, gestão de equipa e desenho e gestão de bases de dados.
+\section{Identificação dos membros da equipa}
+\paragraph{Ricardo Sá Monteiro 
+\\ Aluno de 2º ano na Universidade Lusófona do Porto}
+\paragraph{Rita Mendes de Azevedo
+\\Aluna de 2º ano na Universidade Lusófona do Porto}
+\paragraph{Vasco Manuel Pinheiro de Oliveira Matos Rodrigues
+\\Aluno de 2º ano na Universidade Lusófona do Porto}
 \section{Responsabilidades e Tarefas de cada membro da equipa}
-\section{Responsabilidades e Tarefas de cada membro da equipa}
+\subsection{Ricardo Sá Monteiro}
+Responsavel por x
+\subsection{Rita Mendes de Azevedo}
+Responsavel por y
+\subsection{Vasco Manuel Pinheiro de Oliveira Matos Rodrigues}
+Responsavel por z
 \section{Identificação de formação em valências/competências a adquirir}
-\section{Identificação de necessidades de contratação de pessoal
-}
+Formações em programação de x y e z
+\section{Identificação de necessidades de contratação de pessoal}
+Não é necessario
 \section{Identificação de necessidades de subcontratação}
+Também não acho necessario
 \section{Se necessário pode ser complementado com um organograma}
+Por meter...
