--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -11,7 +11,7 @@
 \input{ambito}
 \input{calendarizacao}
 \input{organizacao_da_equipa}
-
+\input{descricao_tecnica_dos_sistemas}
 \bibliography{library}
 \end{document}
 
