--- a/Eng-Software/ambito.tex
+++ b/Eng-Software/ambito.tex
@@ -2,8 +2,9 @@
 \label{ambito}
 \section{Apresentação}
 \subsection{Contexto e Enquadramento}
-Este sistema apresentou-se num contexto que muitos de nós nos encontramos na grande cidade do Porto e em todo Portugal, existem mais padarias que ruas e maior parte são geridas pelos nossos vizinhos comuns de meia idade com pouco planeamento,conhecimento e pouco suporte :(.\\
-A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor.\\
+Este sistema apresentou-se num contexto que muitos de nós nos encontramos na grande cidade do Porto e em todo Portugal a percentagem de pequenos negócios é maior que a percentagem de grandes empresas que existe no nosso país. Podemos ver que existem mais pequenas padarias por vezes mais que uma por rua o que se repara que parte são geridas pelos nossos vizinhos ou conhecidos. A maior parte dessas pequenas padarias já existe de negócios que foram por vezes passados de gerações anteriores ou negócios que existem á mais de vinte anos, e por essa razão essas pequenas padarias acabam por continuar sempre com o mesmo sistema de gestão de apontar tudo em papeis e a utilização de papel e caneta mesmo que saibam utilizar um computador. Com isso o nosso sistema pretende ajudar essas pequenas empresas/padarias.
+A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intúito de fornecer um sistema de facil utilização e manutenção para essas padarias.
+(FALTA REVER PROBLEMAS)
 Os principais problemas serião então a falta de um sistema de gerenciamento fácil de usar,intuitivo e barato para as padarias normais com a necessidade de tal.
 \section{Decomposição funcional do sistema}
 A estrutura do ePadaria irá ser constituido pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados.
