--- a/Eng-Software/ambito.tex
+++ b/Eng-Software/ambito.tex
@@ -2,10 +2,14 @@
 \label{ambito}
 \section{Apresentação}
 \subsection{Contexto e Enquadramento}
-Este sistema apresentou-se num contexto que muitos de nós nos encontramos na grande cidade do Porto e em todo Portugal a percentagem de pequenos negócios é maior que a percentagem de grandes empresas que existe no nosso país. Podemos ver que existem mais pequenas padarias por vezes mais que uma por rua o que se repara que parte são geridas pelos nossos vizinhos ou conhecidos. A maior parte dessas pequenas padarias já existe de negócios que foram por vezes passados de gerações anteriores ou negócios que existem á mais de vinte anos, e por essa razão essas pequenas padarias acabam por continuar sempre com o mesmo sistema de gestão de apontar tudo em papeis e a utilização de papel e caneta mesmo que saibam utilizar um computador. Com isso o nosso sistema pretende ajudar essas pequenas empresas/padarias.
-A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intúito de fornecer um sistema de facil utilização e manutenção para essas padarias. 
-Com isto á que ter em atenção de que apenas se dirige a pequenas empresas de apenas um estabelecimento ,o que neste caso o ePadaria já não seria possível ser adquirido por empresas com mais que um estabelecimento
-(((((Os principais problemas serião então a falta de um sistema de gerenciamento fácil de usar,intuitivo e barato para as padarias normais com a necessidade de tal.)))))
+Este sistema apresentou-se num contexto que muitos de nós nos encontramos na grande cidade do Porto e em todo Portugal a percentagem de pequenos negócios é maior que a percentagem de grandes empresas que existe no nosso país.\\
+Esta área de negócio  exige interação com o cliente desde venda e encomenda de produtos ,como confeção dos próprios produtos com auxilio de cozinha  adquirindo os produtos necessários para os confecionar,o que haverá existencia de stock de ingredientes. Para alem dos pedidos feitos pelos clientes é necessário haver uma quantidade feita de produtos diária para venda aos clientes que passem pelas padarias e comprem.Tambem é uma área de negócio que requere limpeza e qualidade para conseguirem vender os produtos.\\
+ Podemos ver que existem mais pequenas padarias por vezes mais que uma por rua o que se repara que parte são geridas pelos nossos vizinhos ou conhecidos. A maior parte dessas pequenas padarias já existe de negócios que foram por vezes passados de gerações anteriores ou negócios que existem á mais de vinte anos, e por essa razão essas pequenas padarias acabam por continuar sempre com o mesmo sistema de gestão de apontar tudo em papeis e a utilização de papel e caneta mesmo que saibam utilizar um computador. Com isso o nosso sistema pretende ajudar essas pequenas empresas/padarias.\\
+A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intúito de fornecer um sistema de facil utilização e manutenção para essas padarias.É esperado por parte da ePadaria para ajudar nesse contexto um sistema rápido e de maneira que vários utilizadores de dentro da padaria possam vir a usar o sistema ao mesmo tempo e não apenas por um utilizador. \\
+O nosso sistema viria a facilitar  a organização dessas pequenas padarias  ajudando a melhor organizar os pedidos dos clientes onde o cliente pode comprar pelo site e depois apenas ir á padaria levantar o pedido ,como tambem facilidade a ver o stock de produtos disponivel e armazenar as receitas no sistema dos seus produtos para fácil consulta.\\
+Há que ter em atenção de que apenas se dirige a pequenas empresas de apenas um estabelecimento ,o que neste caso o ePadaria já não seria possível ser adquirido por empresas com mais que um estabelecimento.As pessoas que não estão habituadas ao uso de um computador pode prejudicar no começo a gestão da padaria ,dado que iriam ter a necessidade de aprender como usar o sistema e demorar até ter o mesmo ritmo de rapidez de alguem que já saiba usar facilmente um computador,como tambem seria necessário por parte das padarias acesso á internet,um ou mais computadores e pagar um custo pela ePadaria.\\
+
+
 \section{Decomposição funcional do sistema}
 A estrutura do ePadaria irá ser constituido pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados.
 \section{Constrangimentos do processo}
