--- a/Eng-Software/ambito.tex
+++ b/Eng-Software/ambito.tex
@@ -3,17 +3,21 @@
 \section{Apresentação}
 \subsection{Contexto e Enquadramento}
 Este sistema apresentou-se num contexto que muitos de nós nos encontramos na grande cidade do Porto e em todo Portugal a percentagem de pequenos negócios é maior que a percentagem de grandes empresas que existe no nosso país.\\
+A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intúito de fornecer um sistema de facil utilização e manutenção para essas padarias.É esperado por parte da ePadaria para ajudar nesse contexto um sistema rápido e de maneira que vários utilizadores de dentro da padaria possam vir a usar o sistema ao mesmo tempo e não apenas por um utilizador. \\
 Esta área de negócio  exige interação com o cliente desde venda e encomenda de produtos ,como confeção dos próprios produtos com auxilio de cozinha  adquirindo os produtos necessários para os confecionar,o que haverá existencia de stock de ingredientes. Para alem dos pedidos feitos pelos clientes é necessário haver uma quantidade feita de produtos diária para venda aos clientes que passem pelas padarias e comprem.Tambem é uma área de negócio que requere limpeza e qualidade para conseguirem vender os produtos.\\
  Podemos ver que existem mais pequenas padarias por vezes mais que uma por rua o que se repara que parte são geridas pelos nossos vizinhos ou conhecidos. A maior parte dessas pequenas padarias já existe de negócios que foram por vezes passados de gerações anteriores ou negócios que existem á mais de vinte anos, e por essa razão essas pequenas padarias acabam por continuar sempre com o mesmo sistema de gestão de apontar tudo em papeis e a utilização de papel e caneta mesmo que saibam utilizar um computador. Com isso o nosso sistema pretende ajudar essas pequenas empresas/padarias.\\
-A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intúito de fornecer um sistema de facil utilização e manutenção para essas padarias.É esperado por parte da ePadaria para ajudar nesse contexto um sistema rápido e de maneira que vários utilizadores de dentro da padaria possam vir a usar o sistema ao mesmo tempo e não apenas por um utilizador. \\
-O nosso sistema viria a facilitar  a organização dessas pequenas padarias  ajudando a melhor organizar os pedidos dos clientes onde o cliente pode comprar pelo site e depois apenas ir á padaria levantar o pedido ,como tambem facilidade a ver o stock de produtos disponivel e armazenar as receitas no sistema dos seus produtos para fácil consulta.\\
-Há que ter em atenção de que apenas se dirige a pequenas empresas de apenas um estabelecimento ,o que neste caso o ePadaria já não seria possível ser adquirido por empresas com mais que um estabelecimento.As pessoas que não estão habituadas ao uso de um computador pode prejudicar no começo a gestão da padaria ,dado que iriam ter a necessidade de aprender como usar o sistema e demorar até ter o mesmo ritmo de rapidez de alguem que já saiba usar facilmente um computador,como tambem seria necessário por parte das padarias acesso á internet,um ou mais computadores e pagar um custo pela ePadaria.\\
+
+
 
 
 \section{Decomposição funcional do sistema}
-A estrutura do ePadaria irá ser constituido pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados.
+
+
+A estrutura do ePadaria ajuda as pequenas padarias e ao qual o nosso sistema irá ser constituido pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria os que os mesmo achassem que não fosse confidencial,mas não seriam partilhadas com os clientes. Com as funcionalidades do ePadaria tambem facilita á parte dos funcionários a organização e rapidez que não tinham antes antes de aceder a um método de tratamento de pedidos digital.
+
 \section{Constrangimentos do processo}
 \subsection{Desempenho esperado}
-Não se conhece o desempenho esperado por este sistema dado que não se conhece semelhantes e as as suas especificações, mas o desempenho desejado em geral é que seja fácil de usar com um rápido desempenho e de fácil uso e compreenção
+Ainda não se conhece sistemas semelhantes como o ePadaria, então não se conhece o desempenho esperado. De forma geral será necessário um de rápido desempenho, fácil uso,manutenção e compreenção. Se não haver um sistema de rápida compreensão e desempenho irá atrasar o trabalho por parte dos funcionários da padaria e baixar o seu trabalho e produtividade,o que é algo que iria contra o objetivo do ePadaria.
+
 \subsection{Limitações} 
-As limitações encontradas são maior parte relacionadas com estabelecer contacto com as várias padarias,conseguir explicar bem as vantangens todas a possiveís clientes e intregar o nosso framework com o deles. Como tambem ter em conta que se destina a Padarias com apenas um local de venda ao público.
+Há que ter em atenção de que apenas se dirige a pequenas empresas de apenas um estabelecimento ,o que neste caso o ePadaria já não seria possível ser adquirido por empresas com mais que um estabelecimento.É necessário saber usar bem um computador, as pessoas que não estão habituadas ao uso de um computador pode prejudicar no começo a gestão da padaria ,dado que iriam ter a necessidade de aprender como usar o sistema e demorar até ter o mesmo ritmo de rapidez de alguem que já saiba usar facilmente um computador,como tambem seria necessário por parte das padarias acesso á internet,um ou mais computadores e pagar um custo pela ePadaria.\\
