--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -7,6 +7,7 @@ Na gestão de pedidos, o gestor de pedidos, só terá que preencher dados na apl
 refere o que estava invalido no pedido.\\
 Na gestão de pedidos, o gestor de pedidos, só terá que preencher dados na aplicação ePadaria, esta que trata de comunicar e verificar os stocks e também pedidos anteriores, que certifica que haverá espaço para o pedido no dia alocado, e dando ao gestor de pedidos imediatamente uma validação do pedido ou refere o que estava invalido no pedido.\\
 
+
 \section{Descrição do software que será necessário desenvolver}
 \subsection{Requisitos funcionais}
 \subsubsection{Casos de uso}
@@ -14,5 +15,6 @@ Na figura abaixo representa-se o modelo genérico de casos de uso do sistema ePa
 
 \subsubsection{Requisitos}
 \section{Descrição do estrutura física do hardware}
-Para se poder usar o site será mais viavél o seu uso num computador ou tablet que em um telemóvel devido á sua estrutura e ter sido destinado mais para uso no computador. 
-Não é necessário se ter um dispositivo de alto desempenho para se poder aceder ao site e ser usado,apenas é necessário ter os requisitos minimos.
+Para se poder usar o site será mais viavél o seu uso num computador ou tablet que em um telemóvel devido á sua estrutura e ter sido destinado mais para uso no computador. \\
+Não é necessário se ter um dispositivo de alto desempenho para se poder aceder ao site e ser usado,apenas é necessário ter os requisitos minimos.\\
+Por parte dos funcionários da padaria o melhor é usar algo e pelo menos médio desempenho de maneira a o sistema responder de forma rápida e não atrasar a produtividade.
