mais algumas alterações XD

--- a/Eng-Software/introducao.tex
+++ b/Eng-Software/introducao.tex
@@ -3,9 +3,12 @@
 \section{Descrição dos objetivos do documento}
 \subsection{Enquadramento incial}
 Este documento enquadra-se no desenvolvimento do projeto \textbf{ePadaria} , e tem como principais objetivos organizar,planear e solidificar um plano de projeto para o sistema.
+A ideia do ePadaria começou pela cadeira de \textbf{Análise de Sistemas}, o tema foi um dos três temas escolhidos pelo nosso grupo e proposto pelo nossos professor, durante essa cadeira fomos aprendendo sobre requisitos e no final desenvolvemos o documento de requisitos para o ePadaria. No documento definimos os casos de uso,requisitos,os nosso atores,os pacotes do sistema e os nossos fluxos.\\
+Continuamos o desenvolvimento do documento de requisitos mas, com este documento desenvolvido para a cadeira de Engenharia de Software, onde iremos aprender mais um género de documento, outras práticas na escrita do mesmo e alargar os nosso conhecimentos.
 
 \subsection{Público alvo}
-O publico alvo do nosso projeto são a maioria das padarias que se apresentam sem um sistema de gestão de pedidos e obviamente seremos os primeiros a usar.
+O público alvo do nosso projeto são a maioria das padarias que se apresentam sem um sistema de gestão de pedidos.\\
+O ePadaria só irá se destinar a pequenas padarias com a necessidade de passar do uso antiquado dos pedidos e notas em papel e caneta do uso mais atual, utilização de computadores e outros meios eletrónicos que nos permitem ajudar nas necessidades dessas pequenas padarias.
 
 \section{O propósito do projeto a desenvolver}
 O projeto \textbf{ePadaria} tem como objetivo apoiar os pequenos negócios, nomeadamente empresas pequenas, este sistema irá ajudar a simplificar a estrutura dos processos de uma padaria, tendo em conta o fornecimento, processamento, criação e entrega dos produtos.
