--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -12,6 +12,7 @@
 \input{calendarizacao}
 \input{organizacao_da_equipa}
 \input{descricao_tecnica_dos_sistemas}
+\input{standards_tecnicas_ferramentas}
 \bibliography{library}
 \end{document}
 
