edit introdução e outro

--- a/Eng-Software/introducao.tex
+++ b/Eng-Software/introducao.tex
@@ -11,6 +11,6 @@ O público alvo do nosso projeto são a maioria das padarias que se apresentam s
 O ePadaria só irá se destinar a pequenas padarias com a necessidade de passar do uso antiquado dos pedidos e notas em papel e caneta do uso mais atual, utilização de computadores e outros meios eletrónicos que nos permitem ajudar nas necessidades dessas pequenas padarias.
 
 \section{O propósito do projeto a desenvolver}
-O projeto \textbf{ePadaria} tem como objetivo apoiar os pequenos negócios, nomeadamente empresas pequenas, este sistema irá ajudar a simplificar a estrutura dos processos de uma padaria, tendo em conta o fornecimento, processamento, criação e entrega dos produtos.
+O projeto \textbf{ePadaria} tem como objetivo apoiar os pequenos negócios, nomeadamente empresas pequenas, este sistema irá ajudar a simplificar a estrutura dos processos de uma padaria, tendo em conta o fornecimento, processamento, criação e entrega dos produtos.\\
+As padarias locais é um estabelecimento que todos nós frequentamos mesmo que raramente, para além de ser um projeto de seguimento a uma cadeira anterior o facto de gostarmos dos produtos vendidos nas padarias e ser gerido muitas vezes por pessoas com quem relacionamos queremos ajuda-las com o nosso projeto. Podemos observar ao frequentar padarias que muitas não possuem sistemas informatizados e queremos mudar esse aspeto no mercado.
 \\
-A razão para qual escolhemos este projeto é porque sentimos que existe um grande vazio no mercado para um sistema como este.
