--- a/Eng-Software/standards_tecnicas_ferramentas.tex
+++ b/Eng-Software/standards_tecnicas_ferramentas.tex
@@ -3,7 +3,12 @@
 
 \section{Standards}
 \subsection{Organização do código}
+O código no que diz respeito á organização ao desenvolver o ePadaria irá ser organizado por parte do cliente e funcionário onde cada um irá ter acessos diferentes alem de aspetos em comum.
 \subsection{Especificação}
+O ePadaria é constituido pela parte do cliente e a parte do funcionário e ambos terão acesso ás páginas dos contactos e da informação sobre nós, sem haver necessidade de estar registado no ePadaria para ver essa informação.\\
+O cliente vai poder se registar e efetuar o login no nosso sistema onde irá inserir os dados necessários para poder fazer pedidos pelo nosso sistema ás padarias pretendidas. Poderá tambem aceder aos produtos disponiveis e ao aceder a cada produto poderá ver a respetiva padaria ou ver os pedidos em apenas uma especifica padaria. \\
+FALAR DA PARTE DO FUNCIONÀRIO
+
 \subsection{Documentação}
 \subsection{Métricas}
 \subsection{Comentários}
