--- a/Eng-Software/standards_tecnicas_ferramentas.tex
+++ b/Eng-Software/standards_tecnicas_ferramentas.tex
@@ -7,7 +7,7 @@ O código no que diz respeito á organização ao desenvolver o ePadaria irá se
 \subsection{Especificação}
 O ePadaria é constituido pela parte do cliente e a parte do funcionário e ambos terão acesso ás páginas dos contactos e da informação sobre nós, sem haver necessidade de estar registado no ePadaria para ver essa informação.\\
 O cliente vai poder se registar e efetuar o login no nosso sistema onde irá inserir os dados necessários para poder fazer pedidos pelo nosso sistema ás padarias pretendidas. Poderá tambem aceder aos produtos disponiveis e ao aceder a cada produto poderá ver a respetiva padaria ou ver os pedidos em apenas uma especifica padaria. \\
-FALAR DA PARTE DO FUNCIONÀRIO
+O funcionário vai ter uma parte no ePadaria que só ele poderá aceder onde irá conter o necessário para poder ver os pedidos efetuados pelos clientes, incluíndo os que já foram concluídos. Poderá ver as informações dos produtos pedidos pelo cliente, quem efectuou o pedido e a data e hora do pedido. Na parte dos produtos o funcionário pode eliminar ou acrescentar novos produtos para o cliente poder comprar ,terá de inserir a informação do produto referente ao nome e breve descrição.
 
 \subsection{Documentação}
 \subsection{Métricas}
