adicionar novos capitulos

--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -13,6 +13,8 @@
 \input{organizacao_da_equipa}
 \input{descricao_tecnica_dos_sistemas}
 \input{standards_tecnicas_ferramentas}
+\input{plano_de_qualidade}
+\input{plano_de_gestao_de_configuracoes}
 \bibliography{library}
 \end{document}
 
