--- a/Eng-Software/plano_de_gestao_de_configuracoes.tex
+++ b/Eng-Software/plano_de_gestao_de_configuracoes.tex
@@ -6,6 +6,10 @@
 \subsection{Descrição dos vários modos do sistema}
 \subsubsection{Administradores}
 \subsubsection{Utilizadores registados}
-Para estar no modo registado,o utilizador primeiro terá de se registar no nosso Sistema,assim poderá ter acesso a sitios que não tinha antes. Os utilizadores registados irão poder ver o mesmo que no modo Público,depois de registados terão direito a aceder aos produtos disponibilizados,a que padaria estes pertencem com as respetivas informações de cada padaria e assim adicionar os produtos ao carrinho para os poder comprar.
+Para estar no modo registado,o utilizador primeiro terá de se registar no nosso Sistema, assim poderá ter acesso a sitios que não tinha antes. Os utilizadores registados irão poder ver o mesmo que no modo Público, depois de registados terão direito a aceder aos produtos disponibilizados, a que padaria estes pertencem com as respetivas informações de cada padaria e assim adicionar os produtos ao carrinho para os poder comprar.
 \subsubsection{Público}
-O modo público é semelhante ao modo de utilizadores registados. Quem estiver neste modo poderá visualizar a home page do ePadaria,os contactos e informação sobre o ePadaria como tambem as páginas de Log In e Sig in do cliente e o carrinho. Tambem poderá aceder ao log in do funcionário mas só em modo administrador é possivel aceder á página de gestão de pedidos e produtos ,como tambem para aceder aos produtos listados no ePadaria é necessário estar em modo Utilizadores registados.
+O modo público é semelhante ao modo de utilizadores registados. Quem estiver neste modo poderá visualizar a home page do ePadaria, os contactos e informação sobre o ePadaria como também as páginas de Log In e Sig in do cliente e o carrinho. Também poderá aceder ao log in do funcionário mas só em modo administrador é possível aceder á página de gestão de pedidos e produtos, como também para aceder aos produtos listados no ePadaria é necessário estar em modo Utilizadores registados.
+\subsubsection{Administradores}
+O modo Administradores será um modo restrito, esses utilizadores irão poder visualizar como público, mas não terão acesso à parte de comprar produtos. Em vez disso nesse modo terão acesso a uma página que só os administradores poderão aceder, essa página contém acesso para o administrador poder remover ou adicionar pedidos e também poder visualizar os pedidos feitos que ainda aguardam conclusão e os pedidos já concluídos.
+\subsubsection{Gestor do sistema}
+??????????????????
