--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -15,6 +15,7 @@
 \input{standards_tecnicas_ferramentas}
 \input{plano_de_qualidade}
 \input{plano_de_gestao_de_configuracoes}
+\input{plano_de_documentacao}
 \bibliography{library}
 \end{document}
 
