--- a/Eng-Software/plano_de_documentacao.tex
+++ b/Eng-Software/plano_de_documentacao.tex
@@ -3,7 +3,26 @@
 
 \section{Enumeração dos documentos que será necessário produzir}
 Para a construção do ePadaria como em qualquer um sistema é necessário a escrita de vários tipos de documentos para o sistema no final ficar bem estruturado e de acordo com as expectativas.\\
-Os documentos que será necessário produzir serão numeadamente o documento de especificação de requisitos,o plano de qualidade,o plano de testes,o plano de formação,o plano de gestão de dados,o plano de gestão de recursos,o plano de segurança e o plano de gestão de risco
+Os documentos que será necessário produzir serão no
+meadamente o documento de especificação de requisitos,o plano de qualidade,o plano de testes,o plano de formação,o plano de gestão de dados,o plano de gestão de recursos,o plano de segurança e o plano de gestão de risco
 \section{Identificação do responsável pela sua redação e aprovação}
+meter
 
 \section{Descrição de cada documento}
+\subsection{Documento de especificação de requisitos}
+No documento de especificação de requisitos do ePadaria é descrito o sistema antes de passar á implementação com auxílio de tabelas e diagramas específicos usados na prática do documento, e também contem os recursos necessários ao desenvolvimento do sistema. 
+\subsection{Plano de qualidade}
+No plano de qualidade está inserido o plano usado no ePadaria ao longo do seu desenvolvimento de maneira a minimizar riscos e haver maior sucesso na conclusão do sistema. \\ O plano irá constar os responsáveis por a qualidade do ePadaria incluindo as responsabilidades do gestor.
+FALAR DOS OUTROS 2 topicos
+\subsection{Plano de gestão de dados}
+No plano de gestão de dados é descrito a forma como os dados foram recolhidos, armazenados e manipulados até ao "estado" final desses dados onde irão ser usados na base de dados. Irá ser apresentado a base de dados do ePadaria com as respetivas pessoas que têm permissões de acesso aos dados e a quais.
+\subsection{Plano de gestão de recursos}
+
+
+\subsection{Plano de testes}
+No plano de testes é indicado os objetivos dos testes efetuados ao ePadaria, descrição dos níveis de integridade, que testes são realizados com a respetiva descrição, como são gerados os dados para os testes com a respetiva descrição e descrição dos testes de integração dos módulos.
+\subsection{Plano de formação}
+No plano de formação é indicado os métodos de formação para usar o sistema ePadaria, indicando o tempo de duração da formação, número de participantes e a avaliação desses participantes. A nível mais interno é indicado os recursos para os métodos usados na formação como a base de dados alternativa usada.
+\subsection{Plano de segurança}
+\subsection{Plano de gestão de risco}
+\subsection{Plano de manutenção}
