--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -16,6 +16,7 @@
 \input{plano_de_qualidade}
 \input{plano_de_gestao_de_configuracoes}
 \input{plano_de_documentacao}
+\input{plano_de_gestao_de_dados}
 \bibliography{library}
 \end{document}
 
