capt 9 só falta por um cargo

--- a/Eng-Software/plano_de_documentacao.tex
+++ b/Eng-Software/plano_de_documentacao.tex
@@ -6,7 +6,9 @@ Para a construção do ePadaria como em qualquer um sistema é necessário a esc
 Os documentos que será necessário produzir serão no
 meadamente o documento de especificação de requisitos,o plano de qualidade,o plano de testes,o plano de formação,o plano de gestão de dados,o plano de gestão de recursos,o plano de segurança e o plano de gestão de risco
 \section{Identificação do responsável pela sua redação e aprovação}
-meter
+No desenvolvimento dos documentos necessários os responsáveis pela respetiva redação são os alunos Ricardo Monteiro, Rita Azevedo e Vasco Rodrigues. Os documentos e respetivos planos, são estruturados e planeados com o máximo cuidado, sendo usado técnicas e práticas comuns na construção dos documentos, para permitir o fácil entendimento na consulta e leitura.\\
+A pessoa responsável pela aprovação dos documentos usados para construir e implementar os diversos planos com objetivo de tornar o ePadaria o mais eficiente possível é xxxxxxxxxx, assim concluída a aprovação dos documentos será implementado o sistema ePadaria seguindo todos os documentos.
+
 
 \section{Descrição de cada documento}
 \subsection{Documento de especificação de requisitos}
@@ -17,12 +19,15 @@ FALAR DOS OUTROS 2 topicos
 \subsection{Plano de gestão de dados}
 No plano de gestão de dados é descrito a forma como os dados foram recolhidos, armazenados e manipulados até ao "estado" final desses dados onde irão ser usados na base de dados. Irá ser apresentado a base de dados do ePadaria com as respetivas pessoas que têm permissões de acesso aos dados e a quais.
 \subsection{Plano de gestão de recursos}
-
+No plano de gestão de recursos é identificado os recursos afetados no desenvolvimento do ePadaria, indicando como os recursos serão utilizados, nomeadamente os recursos humanos, recursos tecnológicos e recursos de apoio e infraestrutura. Inclui também o orçamento do projeto com os valores de cada serviço preciso no desenvolvimento do ePadaria.
 
 \subsection{Plano de testes}
 No plano de testes é indicado os objetivos dos testes efetuados ao ePadaria, descrição dos níveis de integridade, que testes são realizados com a respetiva descrição, como são gerados os dados para os testes com a respetiva descrição e descrição dos testes de integração dos módulos.
 \subsection{Plano de formação}
 No plano de formação é indicado os métodos de formação para usar o sistema ePadaria, indicando o tempo de duração da formação, número de participantes e a avaliação desses participantes. A nível mais interno é indicado os recursos para os métodos usados na formação como a base de dados alternativa usada.
 \subsection{Plano de segurança}
+O plano de segurança do ePadaria é documentado a segurança usada na implementação, os testes de segurança realizados para testar se está tudo de acordo com as espectativas. Está incluído a segurança no alojamento de base de dados de maneira a não permitir acessos não autorizados e manter a integridade dos dados. É realizado todos os backups necessários da base de dados como da aplicação para não ser perdido nenhuma informação e não causar problemas ás padarias parcerias com o ePadaria.
 \subsection{Plano de gestão de risco}
+No plano de risco é descrito os impactos de risco do ePadaria, analisá-los e identifica-los para poder ser possível evitar ou arranjar solução caso os impactos aconteçam. É descrito o plano de resposta a esses riscos o mais complementado possível.
 \subsection{Plano de manutenção}
+No plano de manutenção é indicado o modelo adotado para manutenção do ePadaria, após a entrega aos respetivos clientes recebem o apoio após a entrega do sistema e é-lhes indicado as horas e datas de manutenção do sistema. Em termos mais concretos é documentado as ações feitas durante a manutenção do ePadaria, como será feita a manutenção e os respetivos responsáveis.
