--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -1,3 +1,4 @@
+\usepackage{graphicx}
 \chapter{Descrição técnica dos sistemas}
 \label{descricao_tecnica_dos_sistemas}
 
@@ -21,7 +22,14 @@ METER
 Para se poder usar o site será mais viavél o seu uso num computador ou tablet que em um telemóvel devido á sua estrutura e ter sido destinado mais para uso no computador. \\
 Não é necessário se ter um dispositivo de alto desempenho para se poder aceder ao site e ser usado,apenas é necessário ter os requisitos minimos.\\
 Por parte dos funcionários da padaria o melhor é usar algo e pelo menos médio desempenho de maneira a o sistema responder de forma rápida e não atrasar a produtividade.
+
 Colocar diagrama de distribuição!!!!!!!!!!!!
 
 \section{Descrição da Interface Gráfica}
-Colocar imagens do design de programação
+
+\begin{figure}
+	\centering
+	\includegraphics{peixe}
+	\caption{}
+	\label{fig:peixe}
+\end{figure}
