--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -15,9 +15,9 @@ Na gestão de pedidos, o gestor de pedidos, só terá que preencher dados na apl
 Na figura abaixo representa-se o modelo genérico de casos de uso do sistema ePadaria sob a forma de um diagrama de pacotes. Cada pacote agrega uma ou mais partes do sistema que se destinam a suportar processos da organização e/ou a reunir um conjunto de funcionalidades. Em cada pacote incluem-se alguns exemplos de Atores e casos de uso desenvolvidos para o sistema.
 
 \subsubsection{Requisitos}
-METER
+Colocar imagens das tabelas
 \subsubsection{Requisitos não-funcionais}
-METER
+colocar imagens das tabelas
 \section{Descrição do estrutura física do hardware}
 Para se poder usar o site será mais viavél o seu uso num computador ou tablet que em um telemóvel devido á sua estrutura e ter sido destinado mais para uso no computador. \\
 Não é necessário se ter um dispositivo de alto desempenho para se poder aceder ao site e ser usado,apenas é necessário ter os requisitos minimos.\\
