--- a/Eng-Software/standards_tecnicas_ferramentas.tex
+++ b/Eng-Software/standards_tecnicas_ferramentas.tex
@@ -10,13 +10,18 @@ O cliente vai poder se registar e efetuar o login no nosso sistema onde irá ins
 O funcionário vai ter uma parte no ePadaria que só ele poderá aceder onde irá conter o necessário para poder ver os pedidos efetuados pelos clientes, incluíndo os que já foram concluídos. Poderá ver as informações dos produtos pedidos pelo cliente, quem efectuou o pedido e a data e hora do pedido. Na parte dos produtos o funcionário pode eliminar ou acrescentar novos produtos para o cliente poder comprar ,terá de inserir a informação do produto referente ao nome e breve descrição.
 
 \subsection{Documentação}
-\subsection{Métricas}
+Para implementar o ePadaria, tal como outros sistemas semelhantes, foi feito diversos tipos de documentos necessários,começando com o
 
 
 \section{Técnicas}
 
 \section{Ferramentas}
-Sendo que o ePadaria, que como sabemos irá nos permitir ajuda as pequenas padarias,ao qual o nosso sistema irá ser constituido pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria os que os mesmo achassem que não fosse confidencial,mas não seriam partilhadas com os clientes.\\
+Sendo que o ePadaria, que como sabemos irá nos permitir ajuda as pequenas padarias, ao qual o nosso sistema irá ser constituído pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados, a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria os que os mesmo achassem que não fosse confidencial, mas não seriam partilhadas com os clientes.\\
 As ferramentas usadas para construir o ePadaria são programas que nos permitem criar bases de dados, a nossa interface como as suas funções. \\
-O programa MySQL é um serviço de armazenamento de dados gerido para inserir aplicativos nativos na nuvem. O MySQL é o programa usado para guardar a base de dados do ePadaria, usando linguagem SQL. A base de dados constitui as diferentes tabelas para armazenar os dados dos clientes, produtos, padarias e dos funcionários.
-FALAR DO ECLIPSE
+O programa MySQL é um serviço de armazenamento de dados gerido para inserir aplicativos nativos na nuvem. O MySQL é o programa usado para guardar a base de dados do ePadaria, usando linguagem SQL. A base de dados constitui as diferentes tabelas para armazenar os dados dos clientes, produtos, padarias e dos funcionários.\\
+Para construir o sistema ePadaria é usado o programa Eclipse IDE, o programa permite criar diversos tipos de projetos e ficheiros ao qual podendo usar vários tipos de linguagens de programação, de marcação e de consulta estruturada. No ePadaria é criado um projeto Dynamic Web Project com ficheiros JSP. As diversas linguagens usadas são:\\
+- HTML (Linguagem de Marcação);\\
+- SQL (Linguagem de consulta estruturada);\\
+- CSS (mecanismo para adicionar estilo a um documento web);\\
+- Java (Linguagem de Programação);\\
+- JavaScript (Linguagem de Programação);\\
