--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -24,12 +24,12 @@ Não é necessário se ter um dispositivo de alto desempenho para se poder acede
 Por parte dos funcionários da padaria o melhor é usar algo e pelo menos médio desempenho de maneira a o sistema responder de forma rápida e não atrasar a produtividade.
 
 Colocar diagrama de distribuição!!!!!!!!!!!!
-
-\section{Descrição da Interface Gráfica}
-
 \begin{figure}
-	\centering
-	\includegraphics{peixe}
+	\includegraphics{gantt}
 	\caption{}
-	\label{fig:peixe}
+	\label{fig:gantt}
 \end{figure}
+
+
+
+
