--- a/Eng-Software/plano_de_qualidade.tex
+++ b/Eng-Software/plano_de_qualidade.tex
@@ -15,5 +15,14 @@ Ao implementar o plano de qualidade deverá estabelecer um padrão baseado nos r
 O gestor de qualidade tem um dos papeis mais importantes e é um dos responsáveis por manter a qualidade no desenvolvimento de um projeto de maneira a evitar erros e a seguir as normas. Ele é responsável por definir métodos de qualidade ,aprovar e analisar documentos de aprovação do software no seu estado final, atuar como suporte técnico da equipa de engenharia da empresa, realizar auditoria,coordenar reclamações vindas dos clientes sobre o produto que lhes diz respeito,implementar e administrar os requisitos das normas de gestão de qualidade.\\
 Apesar das responsabilidades do gestor ,para alguém poder assumir é exigido pelo mercado experiências como já ter trabalhado com controle de qualidade, ser formado na área de engenharia e ter experiência na gestão de projetos, apesar de para ser um profissional na área é exigido mais competências.
 \subsection{Padrões de referência}
-
+Este capitulo foi construido com base na consulta e leitura dos seguintes sites:\\
+-Site Linkedin,escrito por Claudia F. R. \\
+https://pt.linkedin.com/pulse/importância-de-um-plano-qualidade-software-e-testes-farias-ctfl \\
+-Site Project Builder\\
+https://www.projectbuilder.com.br/blog/importancia-da-gestao-da-qualidade-em-projetos-2/
 \subsection{Métricas}
+Com o plano de qualidade pretende-se para o nosso sistema:\\
+-Manter a qualidade do documento de requisitos;\\
+-Estruturar a base de dados com qualidade e organização;\\
+-Construir os Mock Up da ePadaria tendo em conta o necessário para ser intuitivo;\\
+ACABAR!!!!!!!!!!!!!!!
