--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -1,4 +1,4 @@
-\usepackage{graphicx}
+
 \chapter{Descrição técnica dos sistemas}
 \label{descricao_tecnica_dos_sistemas}
 
@@ -15,9 +15,79 @@ Na gestão de pedidos, o gestor de pedidos, só terá que preencher dados na apl
 Na figura abaixo representa-se o modelo genérico de casos de uso do sistema ePadaria sob a forma de um diagrama de pacotes. Cada pacote agrega uma ou mais partes do sistema que se destinam a suportar processos da organização e/ou a reunir um conjunto de funcionalidades. Em cada pacote incluem-se alguns exemplos de Atores e casos de uso desenvolvidos para o sistema.
 
 \subsubsection{Requisitos}
-Colocar imagens das tabelas
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_funcional1}
+	\caption{Requisito funcional Interface do sistema}
+	\label{fig:requisitofuncional1}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_funcional2}
+	\caption{Requisito funcional Iniciar Sessão/Registo no sistema}
+	\label{fig:requisitofuncional2}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_funcional3}
+	\caption{kk}
+	\label{fig:requisitofuncional3}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_funcional4}
+	\caption{}
+	\label{fig:requisitofuncional4}
+\end{figure}
+
+
 \subsubsection{Requisitos não-funcionais}
-colocar imagens das tabelas
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_nao_funcional1}
+	\caption{}
+	\label{fig:requisitonaofuncional1}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_nao_funcional2}
+	\caption{}
+	\label{fig:requisitonaofuncional2}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_nao_funcional3}
+	\caption{}
+	\label{fig:requisitonaofuncional3}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_nao_funcional4}
+	\caption{}
+	\label{fig:requisitonaofuncional4}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_nao_funcional5}
+	\caption{}
+	\label{fig:requisitonaofuncional5}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{requisito_nao_funcional6}
+	\caption{}
+	\label{fig:requisitonaofuncional6}
+\end{figure}
+
 \section{Descrição do estrutura física do hardware}
 Para se poder usar o site será mais viavél o seu uso num computador ou tablet que em um telemóvel devido á sua estrutura e ter sido destinado mais para uso no computador. \\
 Não é necessário se ter um dispositivo de alto desempenho para se poder aceder ao site e ser usado,apenas é necessário ter os requisitos minimos.\\
@@ -25,8 +95,9 @@ Por parte dos funcionários da padaria o melhor é usar algo e pelo menos médio
 
 Colocar diagrama de distribuição!!!!!!!!!!!!
 \begin{figure}
-	\includegraphics{gantt}
-	\caption{}
+	\centering
+	\includegraphics[width=6cm]{gantt}
+	\caption{Gantt Poject do ePadaria}
 	\label{fig:gantt}
 \end{figure}
 
